fix choice jumping issue for dnd legacy

--- a/components/corespring/drag-and-drop/src/client/styles.less
+++ b/components/corespring/drag-and-drop/src/client/styles.less
@@ -32,6 +32,7 @@
     box-shadow: 0px 0px 5px #000;
     border: 1px solid #333;
     cursor: hand; cursor: pointer;
+    padding: 7px;
 }
 
 .view-drag-and-drop-legacy .see-solution .landing-place {
